--- a/RDF/RDF_analysis_4DSTEM.ipynb
+++ b/RDF/RDF_analysis_4DSTEM.ipynb
@@ -32,13 +32,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_list = np.arange(0, 0.0023322*1024, 0.0023322)\n",
+    "k_list = np.arange(0, 0.02079*91, 0.02079)\n",
     "\n",
-    "Fst_AF = single_atom_scatter(elements=[31], composition=[1.0], q_coords=k_list, units='A')\n",
+    "Fst_AF = single_atom_scatter(elements=[6], composition=[1.0], q_coords=k_list, units='A')\n",
     "Fst_AF.get_scattering_factor()\n",
     "Fst_AFF = Fst_AF.fe\n",
     "\n",
-    "Snd_AF = single_atom_scatter(elements=[8], composition=[1.0], q_coords=k_list, units='A')\n",
+    "Snd_AF = single_atom_scatter(elements=[6], composition=[1.0], q_coords=k_list, units='A')\n",
     "Snd_AF.get_scattering_factor()\n",
     "Snd_AFF = Snd_AF.fe\n",
     "\n",
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scale = [1.0, 1.0, 0.0023322]\n",
+    "scale = [2.2478, 2.2478, 0.02079]\n",
     "origin = [0, 0, 0]\n",
     "unit = ['nm', 'nm', '1/A']\n",
     "size = rot_dp_data.shape"
@@ -112,12 +112,13 @@
    "outputs": [],
    "source": [
     "fit_range = [int(0.9*len(k_list)), len(k_list)-1]\n",
-    "cor_term_ctb = np.arange(-0.5, 0.5, 0.01)\n",
+    "cor_term_ctb = np.arange(-10.0, -5.0, 0.01)\n",
     "fit_dif = np.mean(np.mean(rot_dp_data, axis=(0, 1))[fit_range[0]:fit_range[1]]) - np.mean(AF_mean_square[fit_range[0]:fit_range[1]])\n",
     "fit_ratios = []\n",
     "errs = []\n",
     "for i in range(len(cor_term_ctb)):\n",
     "    fit_ratio = np.mean(np.mean(rot_dp_data, axis=(0, 1))[fit_range[0]:fit_range[1]]) / (np.mean(AF_mean_square[fit_range[0]:fit_range[1]])+cor_term_ctb[i]*fit_dif)\n",
+    "    fit_ratio = fit_ratio.clip(min=0.0)\n",
     "    fit_ratios.append(fit_ratio)\n",
     "    error = np.linalg.norm(np.mean(rot_dp_data, axis=(0, 1))[fit_range[0]:fit_range[1]]-(AF_mean_square[fit_range[0]:fit_range[1]]+cor_term_ctb[i]*fit_dif)*fit_ratio)\n",
     "    errs.append(error)\n",
@@ -218,7 +219,7 @@
     "    \n",
     "    ax[0][1].plot(k_list, rot_dp_tmp, 'k-')\n",
     "    ax[0][1].plot(k_list, Nfs_tmp, 'r-')\n",
-    "    ax[0][1].set_ylim(ymin=0.0)\n",
+    "    ax[0][1].set_ylim(ymin=0.0, ymax=0.005)\n",
     "    ax[0][1].fill_between([k_list[0], k_list[int(f_lc*len(filt))]], np.max(rot_dp_tmp), alpha=0.5, color=\"green\")\n",
     "    ax[0][1].fill_between([k_list[int(f_c*len(filt))], k_list[-1]], np.max(rot_dp_tmp), alpha=0.5, color=\"green\")\n",
     "    ax[0][1].grid()\n",
@@ -239,14 +240,14 @@
     "st = {\"description_width\": \"initial\"}\n",
     "y_wg = pyw.BoundedIntText(value=0, min=0, max=size[0]-1, description=\"y position\", style=st)\n",
     "x_wg = pyw.BoundedIntText(value=0, min=0, max=size[1]-1, description=\"x position\", style=st)\n",
-    "N_wg = pyw.FloatText(value=1.0, step=0.1, description=\"N\", style=st)\n",
-    "alpha_wg = pyw.FloatText(value=0.0, step=0.01, description=\"alpha\", style=st)\n",
+    "N_wg = pyw.FloatText(value=fit_ratios[opt_ind], step=0.001, description=\"N\", style=st)\n",
+    "alpha_wg = pyw.FloatText(value=cor_term_ctb[opt_ind], step=0.005, description=\"alpha\", style=st)\n",
     "filter_wg = pyw.BoundedIntText(value=0, min=0, max=len(filter_types)-1, description=\"filter\", style=st)\n",
     "filter_low_wg = pyw.BoundedFloatText(value=0.05, min=0.0, max=1.0, step=0.01, description=\"filter low cut\", style=st)\n",
     "filter_cut_wg = pyw.BoundedFloatText(value=0.8, min=0.0, max=1.0, step=0.01, description=\"filter high cut\", style=st)\n",
     "full_wg = pyw.Checkbox(value=True, description=\"show the full range of RDF\")\n",
     "\n",
-    "pyw.interact(RDF_4DSTEM, yp=y_wg, xp=x_wg, aph=alpha_wg, fit_range=fit_range_wg, \n",
+    "pyw.interact(RDF_4DSTEM, yp=y_wg, xp=x_wg, aph=alpha_wg,\n",
     "             ln=N_wg, f_n=filter_wg, f_lc=filter_low_wg, f_c=filter_cut_wg, full_check=full_wg)\n",
     "plt.show()"
    ]
