--- a/ptychography/py4DSTEM/py4DSTEM_phase_reconstruction.ipynb
+++ b/ptychography/py4DSTEM/py4DSTEM_phase_reconstruction.ipynb
@@ -12,6 +12,11 @@
     "import matplotlib.pyplot as plt\n",
     "py4DSTEM.__version__\n",
     "\n",
+    "\n",
+    "def fourd_roll_axis(stack):\n",
+    "    stack = np.rollaxis(np.rollaxis(stack, 2, 0), 3, 1)\n",
+    "    return stack\n",
+    "\n",
     "def spike_remove(data, percent_thresh, mode):\n",
     "\n",
     "    pacbed = np.mean(data, axis=(0, 1))\n",
@@ -61,6 +66,18 @@
     "dataset.calibration._params['Q_pixel_units'] = Q_unit\n",
     "dataset.calibration._params['R_pixel_size'] = Rx\n",
     "dataset.calibration._params['R_pixel_units'] = R_unit\n",
+    "\n",
+    "print(dataset)\n",
+    "print(dataset.calibration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.data = fourd_roll_axis(dataset.data)\n",
     "\n",
     "print(dataset)\n",
     "print(dataset.calibration)"
