--- a/imaging/virtual_imaging_4D_STEM.ipynb
+++ b/imaging/virtual_imaging_4D_STEM.ipynb
@@ -18,244 +18,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pressed-company",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "#import cv2\n",
-    "\n",
-    "class sstem_python():\n",
-    "    \n",
-    "    def __init__(self, f_stack, scan_per_pixel, mrad_per_pixel):\n",
-    "        self.original_stack = f_stack\n",
-    "        self.original_shape = f_stack.shape\n",
-    "        self.original_pacbed = np.mean(self.original_stack, axis=(0, 1))\n",
-    "        self.scan_per_pixel = scan_per_pixel\n",
-    "        self.mrad_per_pixel = mrad_per_pixel\n",
-    "        \n",
-    "        self.intensity_integration_map = np.sum(f_stack, axis=(2, 3))\n",
-    "        \n",
-    "    def spike_remove(self, percent_thresh, mode, apply_remove=False):\n",
-    "        threshold = np.percentile(self.intensity_integration_map, percent_thresh)\n",
-    "        if mode == \"upper\":\n",
-    "            spike_ind = np.where(self.intensity_integration_map > threshold)\n",
-    "        elif mode == \"lower\":\n",
-    "            spike_ind = np.where(self.intensity_integration_map < threshold)\n",
-    "        else:\n",
-    "            print(\"Wrong mode!\")\n",
-    "            return\n",
-    "\n",
-    "        print(\"threshold value = %f\"%threshold)\n",
-    "        print(\"number of abnormal pixels = %d\"%len(spike_ind[0]))\n",
-    "        \n",
-    "        self.spike_replaced = self.intensity_integration_map.copy()\n",
-    "        self.spike_replaced[spike_ind] = np.sum(self.original_pacbed)\n",
-    "        \n",
-    "        if apply_remove:\n",
-    "            self.original_stack[spike_ind] = self.original_pacbed.copy()\n",
-    "            self.original_pacbed = np.mean(self.original_stack, axis=(0, 1))\n",
-    "        \n",
-    "    def find_center(self):\n",
-    "        \n",
-    "        Y, X = np.indices(self.original_pacbed.shape)\n",
-    "        com_y = np.sum(self.original_pacbed * Y) / np.sum(self.original_pacbed)\n",
-    "        com_x = np.sum(self.original_pacbed * X) / np.sum(self.original_pacbed)\n",
-    "        self.ct = [com_y, com_x]        \n",
-    "\n",
-    "    def disk_extract(self, buffer_size=0):\n",
-    "        grad = np.gradient(self.original_pacbed)\n",
-    "        grad_map = grad[0]**2 + grad[1] **2\n",
-    "        grad_map = grad_map / np.max(grad_map)\n",
-    "        \n",
-    "        max_ind = np.unravel_index(np.argmax(grad_map, axis=None), grad_map.shape)\n",
-    "        self.least_R = ((max_ind[0]-self.ct[0])**2 + (max_ind[1]-self.ct[1])**2)**(1/2)\n",
-    "        \n",
-    "        print(\"radius of the BF disk = %.2f mrad\"%(self.mrad_per_pixel*self.least_R))\n",
-    "        \n",
-    "        self.cropped_size = np.around(self.least_R + buffer_size).astype(int)\n",
-    "\n",
-    "        if self.cropped_size > self.ct[0] or self.cropped_size > self.ct[1]:\n",
-    "            self.cropped_size = np.min(self.ct).astype(int)\n",
-    "  \n",
-    "        print(\"radius of the RoI = %.2f mrad\"%(self.mrad_per_pixel*self.cropped_size))\n",
-    "        \n",
-    "        h_si = np.floor(self.ct[0]-self.cropped_size).astype(int)\n",
-    "        h_fi = np.ceil(self.ct[0]+self.cropped_size).astype(int)\n",
-    "        w_si = np.floor(self.ct[1]-self.cropped_size).astype(int)\n",
-    "        w_fi = np.ceil(self.ct[1]+self.cropped_size).astype(int)\n",
-    "        \n",
-    "        self.c_ct = [self.cropped_size, self.cropped_size]\n",
-    "        \n",
-    "        self.c_stack = self.original_stack[:, :, h_si:h_fi, w_si:w_fi].copy()\n",
-    "        self.c_shape = self.c_stack.shape\n",
-    "        self.c_pacbed = np.mean(self.c_stack, axis=(0, 1))\n",
-    "        \n",
-    "    def virtual_stem(self, BF, ADF):\n",
-    "        self.BF_detector = radial_indices(self.original_pacbed.shape, BF, self.mrad_per_pixel, center=self.ct)\n",
-    "        self.BF_stem = np.sum(np.multiply(self.original_stack, self.BF_detector), axis=(2, 3))\n",
-    "        \n",
-    "        self.ADF_detector = radial_indices(self.original_pacbed.shape, ADF, self.mrad_per_pixel, center=self.ct)\n",
-    "        self.ADF_stem = np.sum(np.multiply(self.original_stack, self.ADF_detector), axis=(2, 3))\n",
-    "        \n",
-    "    def symmetry_evaluation(self, angle, also_mirror=False):\n",
-    "        \"\"\"\n",
-    "        Krajnak, M. and J. Etheridge, Proc Natl Acad Sci U S A, 2020. 117(45): p. 27805-27810.\n",
-    "        \"\"\"\n",
-    "        rotation_stack = []\n",
-    "        r_correl = np.zeros(self.original_shape[:2])\n",
-    "        m_correl = np.zeros(self.original_shape[:2])\n",
-    "        \n",
-    "        ri = radial_indices(self.c_pacbed.shape, [0, self.cropped_size], 1, center=self.c_ct)\n",
-    "        \n",
-    "        angle = angle * np.pi/180\n",
-    "        alpha, beta = np.cos(angle), np.sin(angle)\n",
-    "        M = np.array([[alpha, beta, (1-alpha)*self.c_ct[1]-beta*self.c_ct[0]], \n",
-    "                      [-beta, alpha, beta*self.c_ct[1]+(1-alpha)*self.c_ct[0]]])\n",
-    "        \n",
-    "        for i in range(self.original_shape[0]):\n",
-    "            for j in range(self.original_shape[1]):\n",
-    "                tmp_dp = self.c_stack[i,j,:,:].copy()\n",
-    "                newdata = np.multiply(rotation(tmp_dp, M), ri)\n",
-    "                rotation_stack.append(newdata)\n",
-    "                r_correl[i,j] = correlation(tmp_dp/np.max(tmp_dp), newdata)\n",
-    "                \n",
-    "                if also_mirror:\n",
-    "                    m_correl[i, j] = mirror(newdata, self.c_ct)\n",
-    "        \n",
-    "        rotation_stack = np.asarray(rotation_stack).reshape(self.c_shape)\n",
-    "        \n",
-    "        return rotation_stack, r_correl, m_correl\n",
-    "    \n",
-    "    def DPC(self, correct_rotation=True, n_theta=100, hpass=0.0, lpass=0.0):\n",
-    "        \"\"\"\n",
-    "        Hachtel, J.A., J.C. Idrobo, and M. Chi, Adv Struct Chem Imaging, 2018. 4(1): p. 10. (https://github.com/hachteja/GetDPC)\n",
-    "        Lazic, I., E.G.T. Bosch, and S. Lazar, Ultramicroscopy, 2016. 160: p. 265-280.\n",
-    "        Savitzky, B.H., et al., arXiv preprint arXiv:2003.09523, 2020. (https://github.com/py4dstem/py4DSTEM)\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        Y, X = np.indices(self.c_pacbed.shape)\n",
-    "        self.ysh = np.sum(self.c_stack * Y, axis=(2, 3)) / np.sum(self.c_stack, axis=(2, 3)) - self.c_ct[0]\n",
-    "        self.xsh = np.sum(self.c_stack * X, axis=(2, 3)) / np.sum(self.c_stack, axis=(2, 3)) - self.c_ct[1]\n",
-    "        \n",
-    "        self.ysh -= np.mean(self.ysh)\n",
-    "        self.xsh -= np.mean(self.xsh)\n",
-    "        \n",
-    "        if correct_rotation:\n",
-    "            theta = np.linspace(-np.pi/2, np.pi/2, n_theta, endpoint=True)\n",
-    "            self.div = []\n",
-    "            self.curl = []\n",
-    "            for t in theta:\n",
-    "                r_ysh = self.xsh * np.sin(t) + self.ysh * np.cos(t)\n",
-    "                r_xsh = self.xsh * np.cos(t) - self.ysh * np.sin(t)\n",
-    "\n",
-    "                gyy, gyx = np.gradient(r_ysh)\n",
-    "                gxy, gxx = np.gradient(r_xsh)\n",
-    "                shift_divergence = gyy + gxx\n",
-    "                shift_curl = gyx - gxy\n",
-    "\n",
-    "                self.div.append(np.mean(shift_divergence**2))\n",
-    "                self.curl.append(np.mean(shift_curl**2))\n",
-    "                \n",
-    "            self.c_theta = theta[np.argmin(self.curl)]\n",
-    "            tmp_ysh = self.xsh * np.sin(self.c_theta) + self.ysh * np.cos(self.c_theta)\n",
-    "            tmp_xsh = self.xsh * np.cos(self.c_theta) - self.ysh * np.sin(self.c_theta)\n",
-    "            \n",
-    "            self.ysh = tmp_ysh\n",
-    "            self.xsh = tmp_xsh\n",
-    "            \n",
-    "        self.E_mag = np.sqrt(self.ysh**2 + self.xsh**2)\n",
-    "        self.E_field_y = -self.ysh / np.max(self.E_mag)\n",
-    "        self.E_field_x = -self.xsh / np.max(self.E_mag)\n",
-    "        \n",
-    "        self.charge_density = np.gradient(self.E_field_y)[0] + np.gradient(self.E_field_x)[1]\n",
-    "        \n",
-    "        self.potential = get_icom(self.ysh, self.xsh, hpass, lpass)\n",
-    "\n",
-    "\n",
-    "def radial_indices(shape, radial_range, scale, center=None):\n",
-    "    y, x = np.indices(shape)\n",
-    "    if not center:\n",
-    "        center = np.array([(y.max()-y.min())/2.0, (x.max()-x.min())/2.0])\n",
-    "    \n",
-    "    r = np.hypot(y - center[0], x - center[1]) * scale\n",
-    "    ri = np.ones(r.shape)\n",
-    "    \n",
-    "    if len(np.unique(radial_range)) > 1:\n",
-    "        ri[np.where(r < radial_range[0])] = 0\n",
-    "        ri[np.where(r > radial_range[1])] = 0\n",
-    "        \n",
-    "    else:\n",
-    "        r = np.round(r)\n",
-    "        ri[np.where(r != round(radial_range[0]))] = 0\n",
-    "    \n",
-    "    return ri\n",
-    "\n",
-    "def correlation(dat2d, newdata):\n",
-    "    # return correlation value\n",
-    "    dat1d = dat2d.flatten()\n",
-    "    new1d = newdata.flatten()\n",
-    "    correlation = np.correlate(dat1d, new1d)\n",
-    "\n",
-    "    return correlation[0]\n",
-    "\n",
-    "def rotation(data, RM):\n",
-    "    \n",
-    "    rotated = cv2.warpAffine(data, RM, data.shape)\n",
-    "                \n",
-    "    return rotated/np.max(rotated)\n",
-    "\n",
-    "def mirror(data, center):\n",
-    "    #Input data : 2d # Return : Correlation value\n",
-    "    data1 = data[:, :int(center[1]-1)]\n",
-    "    data2 = np.flip(data, axis=1)[:, :int(center[1]-1)]\n",
-    "    value = correlation(data1, data2)        \n",
-    "    \n",
-    "    return value\n",
-    "\n",
-    "def get_icom(ysh, xsh, hpass=0, lpass=0):\n",
-    "    \n",
-    "    FT_ysh = np.fft.fftshift(np.fft.fft2(np.fft.fftshift(ysh)))\n",
-    "    FT_xsh = np.fft.fftshift(np.fft.fft2(np.fft.fftshift(xsh)))\n",
-    "    \n",
-    "    ky = np.fft.fftshift(np.fft.fftfreq(FT_ysh.shape[0])).reshape(-1, 1)\n",
-    "    kx = np.fft.fftshift(np.fft.fftfreq(FT_xsh.shape[1])).reshape(1, -1)\n",
-    "\n",
-    "    k2 = ky**2 + kx**2\n",
-    "    zero_ind = np.where(k2 == 0.0)\n",
-    "    k2[zero_ind] = 1.0\n",
-    "\n",
-    "    FT_phase = (FT_ysh*ky + FT_xsh*kx) / (2*np.pi*1j*(hpass+k2+lpass*k2))\n",
-    "    FT_phase[zero_ind] = 0.0\n",
-    "\n",
-    "    Iicom = np.real(np.fft.ifftshift(np.fft.ifft2(np.fft.ifftshift(FT_phase))))\n",
-    "    \n",
-    "    return Iicom\n",
-    "\n",
-    "def find_nearest(array, value):\n",
-    "    array = np.asarray(array)\n",
-    "    idx = (np.abs(array - value)).argmin()\n",
-    "    return idx\n",
-    "\n",
-    "def load_binary_4D_stack(img_adr, datatype, original_shape, final_shape, log_scale=False):\n",
-    "    stack = np.fromfile(img_adr, dtype=datatype)\n",
-    "    stack = stack.reshape(original_shape)\n",
-    "    if log_scale:\n",
-    "        stack = np.log(stack[:final_shape[0], :final_shape[1], :final_shape[2], :final_shape[3]])\n",
-    "    else:\n",
-    "        stack = stack[:final_shape[0], :final_shape[1], :final_shape[2], :final_shape[3]]\n",
-    "    return stack"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "desirable-dealer",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from virtual_imaging import sstem_python\n",
     "import tifffile\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
@@ -576,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.7.16"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
