--- a/RDF/RDF_analysis_4DSTEM.ipynb
+++ b/RDF/RDF_analysis_4DSTEM.ipynb
@@ -22,33 +22,17 @@
     "plt.rcParams['font.family'] = 'Times New Roman'\n",
     "color_rep = [\"black\", \"orange\", \"purple\", \"blue\", \"red\", \"green\", \"yellow\", \"lime\", \n",
     "             \"cyan\", \"magenta\", \"lightgray\", \"peru\", \"springgreen\", \"deepskyblue\", \n",
-    "             \"hotpink\", \"darkgray\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8946c13f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k_list = np.arange(0, 0.02079*91, 0.02079)\n",
+    "             \"hotpink\", \"darkgray\"]\n",
     "\n",
-    "Fst_AF = single_atom_scatter(elements=[6], composition=[1.0], q_coords=k_list, units='A')\n",
-    "Fst_AF.get_scattering_factor()\n",
-    "Fst_AFF = Fst_AF.fe\n",
-    "\n",
-    "Snd_AF = single_atom_scatter(elements=[6], composition=[1.0], q_coords=k_list, units='A')\n",
-    "Snd_AF.get_scattering_factor()\n",
-    "Snd_AFF = Snd_AF.fe\n",
-    "\n",
-    "composition = [0.5, 0.5]\n",
-    "AF_mean_square = (Fst_AFF*composition[0] + Snd_AFF*composition[1])**2\n",
-    "AF_square_mean = Fst_AFF**2*composition[0] + Snd_AFF**2*composition[1]\n",
-    "\n",
-    "#max_nor = np.max(AF_square_mean)\n",
-    "#AF_mean_square /= max_nor\n",
-    "#AF_square_mean /= max_nor"
+    "def rif_to_rdf(rif, r_list, k_list):\n",
+    "    gr = []\n",
+    "    for i in range(len(r_list)):\n",
+    "        sin_rk = np.sin(2*np.pi*r_list[i]*k_list)\n",
+    "        rif_sin = rif * sin_rk\n",
+    "        gr_tmp = 8 * np.pi * simpson(rif_sin, dx=(k_list[1]-k_list[0]))\n",
+    "        gr.append(gr_tmp)\n",
+    "    \n",
+    "    return np.asarray(gr)"
    ]
   },
   {
@@ -107,6 +91,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8946c13f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_list = np.arange(0, scale[2]*rot_dp_data.shape[2], scale[2])\n",
+    "\n",
+    "Fst_AF = single_atom_scatter(elements=[6], composition=[1.0], q_coords=k_list, units='A')\n",
+    "Fst_AF.get_scattering_factor()\n",
+    "Fst_AFF = Fst_AF.fe\n",
+    "\n",
+    "Snd_AF = single_atom_scatter(elements=[6], composition=[1.0], q_coords=k_list, units='A')\n",
+    "Snd_AF.get_scattering_factor()\n",
+    "Snd_AFF = Snd_AF.fe\n",
+    "\n",
+    "composition = [0.5, 0.5]\n",
+    "AF_mean_square = (Fst_AFF*composition[0] + Snd_AFF*composition[1])**2\n",
+    "AF_square_mean = Fst_AFF**2*composition[0] + Snd_AFF**2*composition[1]\n",
+    "\n",
+    "#max_nor = np.max(AF_square_mean)\n",
+    "#AF_mean_square /= max_nor\n",
+    "#AF_square_mean /= max_nor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4d0bec49-e8b4-4baa-8933-6853865af0d3",
    "metadata": {},
    "outputs": [],
@@ -148,24 +158,6 @@
     "ax.grid()\n",
     "fig.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea7a723d-98fb-40d8-8941-1175c16a44b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rif_to_rdf(rif, r_list, k_list):\n",
-    "    gr = []\n",
-    "    for i in range(len(r_list)):\n",
-    "        sin_rk = np.sin(2*np.pi*r_list[i]*k_list)\n",
-    "        rif_sin = rif * sin_rk\n",
-    "        gr_tmp = 8 * np.pi * simpson(rif_sin, dx=(k_list[1]-k_list[0]))\n",
-    "        gr.append(gr_tmp)\n",
-    "    \n",
-    "    return np.asarray(gr)"
    ]
   },
   {
@@ -219,7 +211,7 @@
     "    \n",
     "    ax[0][1].plot(k_list, rot_dp_tmp, 'k-')\n",
     "    ax[0][1].plot(k_list, Nfs_tmp, 'r-')\n",
-    "    ax[0][1].set_ylim(ymin=0.0, ymax=0.005)\n",
+    "    ax[0][1].set_ylim(ymin=0.0, ymax=np.max(Nfs_tmp))\n",
     "    ax[0][1].fill_between([k_list[0], k_list[int(f_lc*len(filt))]], np.max(rot_dp_tmp), alpha=0.5, color=\"green\")\n",
     "    ax[0][1].fill_between([k_list[int(f_c*len(filt))], k_list[-1]], np.max(rot_dp_tmp), alpha=0.5, color=\"green\")\n",
     "    ax[0][1].grid()\n",
@@ -265,6 +257,8 @@
     "print(N)\n",
     "filter_select = filter_wg.value\n",
     "print(filter_select)\n",
+    "low_cut = filter_low_wg.value\n",
+    "print(low_cut)\n",
     "high_cut = filter_cut_wg.value\n",
     "print(high_cut)"
    ]
@@ -280,6 +274,7 @@
     "for i in range(size[1]):\n",
     "    for j in range(size[0]):\n",
     "        filt = damp[filter_select].copy()\n",
+    "        filt[:int(low_cut*len(filt))] = 0\n",
     "        filt[int(high_cut*len(filt)):] = 0\n",
     "        ind = np.linspace(0, len(filt)-1, size[n_dim-1]).astype(np.int16)\n",
     "        filt = filt[ind]\n",
