--- a/RDF/RDF_analysis_SADP.ipynb
+++ b/RDF/RDF_analysis_SADP.ipynb
@@ -22,33 +22,17 @@
     "plt.rcParams['font.family'] = 'Times New Roman'\n",
     "color_rep = [\"black\", \"orange\", \"purple\", \"blue\", \"red\", \"green\", \"yellow\", \"lime\", \n",
     "             \"cyan\", \"magenta\", \"lightgray\", \"peru\", \"springgreen\", \"deepskyblue\", \n",
-    "             \"hotpink\", \"darkgray\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8946c13f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k_list = np.arange(0, 0.0023322*1024, 0.0023322)\n",
-    "\n",
-    "Fst_AF = single_atom_scatter(elements=[31], composition=[1.0], q_coords=k_list, units='A')\n",
-    "Fst_AF.get_scattering_factor()\n",
-    "Fst_AFF = Fst_AF.fe\n",
-    "\n",
-    "Snd_AF = single_atom_scatter(elements=[8], composition=[1.0], q_coords=k_list, units='A')\n",
-    "Snd_AF.get_scattering_factor()\n",
-    "Snd_AFF = Snd_AF.fe\n",
-    "\n",
-    "composition = [0.5, 0.5]\n",
-    "AF_mean_square = (Fst_AFF*composition[0] + Snd_AFF*composition[1])**2\n",
-    "AF_square_mean = Fst_AFF**2*composition[0] + Snd_AFF**2*composition[1]\n",
-    "\n",
-    "#max_nor = np.max(AF_square_mean)\n",
-    "#AF_mean_square /= max_nor\n",
-    "#AF_square_mean /= max_nor"
+    "             \"hotpink\", \"darkgray\"]\n",
+    "        \n",
+    "def rif_to_rdf(rif, r_list, k_list):\n",
+    "    gr = []\n",
+    "    for i in range(len(r_list)):\n",
+    "        sin_rk = np.sin(2*np.pi*r_list[i]*k_list)\n",
+    "        rif_sin = rif * sin_rk\n",
+    "        gr_tmp = 8 * np.pi * simpson(rif_sin, dx=(k_list[1]-k_list[0]))\n",
+    "        gr.append(gr_tmp)\n",
+    "    \n",
+    "    return np.asarray(gr)"
    ]
   },
   {
@@ -102,10 +86,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scale = [1.0, 1.0, 0.0023322]\n",
+    "scale = [1.0, 1.0, 0.01722]\n",
     "origin = [0, 0, 0]\n",
     "unit = ['nm', 'nm', '1/A']\n",
     "size = rot_dp_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8946c13f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_list = np.arange(0, scale[2]*rot_dp_data.shape[2], scale[2])\n",
+    "\n",
+    "Fst_AF = single_atom_scatter(elements=[31], composition=[1.0], q_coords=k_list, units='A')\n",
+    "Fst_AF.get_scattering_factor()\n",
+    "Fst_AFF = Fst_AF.fe\n",
+    "\n",
+    "Snd_AF = single_atom_scatter(elements=[8], composition=[1.0], q_coords=k_list, units='A')\n",
+    "Snd_AF.get_scattering_factor()\n",
+    "Snd_AFF = Snd_AF.fe\n",
+    "\n",
+    "composition = [0.45, 0.55]\n",
+    "AF_mean_square = (Fst_AFF*composition[0] + Snd_AFF*composition[1])**2\n",
+    "AF_square_mean = Fst_AFF**2*composition[0] + Snd_AFF**2*composition[1]\n",
+    "\n",
+    "#max_nor = np.max(AF_square_mean)\n",
+    "#AF_mean_square /= max_nor\n",
+    "#AF_square_mean /= max_nor"
    ]
   },
   {
@@ -151,24 +161,6 @@
     "ax.grid()\n",
     "fig.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea7a723d-98fb-40d8-8941-1175c16a44b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rif_to_rdf(rif, r_list, k_list):\n",
-    "    gr = []\n",
-    "    for i in range(len(r_list)):\n",
-    "        sin_rk = np.sin(2*np.pi*r_list[i]*k_list)\n",
-    "        rif_sin = rif * sin_rk\n",
-    "        gr_tmp = 8 * np.pi * simpson(rif_sin, dx=(k_list[1]-k_list[0]))\n",
-    "        gr.append(gr_tmp)\n",
-    "    \n",
-    "    return np.asarray(gr)"
    ]
   },
   {
@@ -222,7 +214,7 @@
     "    \n",
     "    ax[0][1].plot(k_list, rot_dp_tmp, 'k-')\n",
     "    ax[0][1].plot(k_list, Nfs_tmp, 'r-')\n",
-    "    ax[0][1].set_ylim(ymin=0.0)\n",
+    "    ax[0][1].set_ylim(ymin=0.0, ymax=np.max(Nfs_tmp))\n",
     "    ax[0][1].fill_between([k_list[0], k_list[int(f_lc*len(filt))]], np.max(rot_dp_tmp), alpha=0.5, color=\"green\")\n",
     "    ax[0][1].fill_between([k_list[int(f_c*len(filt))], k_list[-1]], np.max(rot_dp_tmp), alpha=0.5, color=\"green\")\n",
     "    ax[0][1].grid()\n",
@@ -243,14 +235,14 @@
     "st = {\"description_width\": \"initial\"}\n",
     "y_wg = pyw.BoundedIntText(value=0, min=0, max=size[0]-1, description=\"y position\", style=st)\n",
     "x_wg = pyw.BoundedIntText(value=0, min=0, max=size[1]-1, description=\"x position\", style=st)\n",
-    "N_wg = pyw.FloatText(value=1.0, step=0.1, description=\"N\", style=st)\n",
-    "alpha_wg = pyw.FloatText(value=0.0, step=0.01, description=\"alpha\", style=st)\n",
+    "N_wg = pyw.FloatText(value=fit_ratios[opt_ind], step=0.0001, description=\"N\", style=st)\n",
+    "alpha_wg = pyw.FloatText(value=cor_term_ctb[opt_ind], step=0.01, description=\"alpha\", style=st)\n",
     "filter_wg = pyw.BoundedIntText(value=0, min=0, max=len(filter_types)-1, description=\"filter\", style=st)\n",
     "filter_low_wg = pyw.BoundedFloatText(value=0.05, min=0.0, max=1.0, step=0.01, description=\"filter low cut\", style=st)\n",
     "filter_cut_wg = pyw.BoundedFloatText(value=0.8, min=0.0, max=1.0, step=0.01, description=\"filter high cut\", style=st)\n",
     "full_wg = pyw.Checkbox(value=True, description=\"show the full range of RDF\")\n",
     "\n",
-    "pyw.interact(RDF_4DSTEM, yp=y_wg, xp=x_wg, aph=alpha_wg, fit_range=fit_range_wg, \n",
+    "pyw.interact(RDF_4DSTEM, yp=y_wg, xp=x_wg, aph=alpha_wg,\n",
     "             ln=N_wg, f_n=filter_wg, f_lc=filter_low_wg, f_c=filter_cut_wg, full_check=full_wg)\n",
     "plt.show()"
    ]
@@ -268,6 +260,8 @@
     "print(N)\n",
     "filter_select = filter_wg.value\n",
     "print(filter_select)\n",
+    "low_cut = filter_low_wg.value\n",
+    "print(low_cut)\n",
     "high_cut = filter_cut_wg.value\n",
     "print(high_cut)"
    ]
@@ -283,6 +277,7 @@
     "for i in range(size[1]):\n",
     "    for j in range(size[0]):\n",
     "        filt = damp[filter_select].copy()\n",
+    "        filt[:int(low_cut*len(filt))] = 0\n",
     "        filt[int(high_cut*len(filt)):] = 0\n",
     "        ind = np.linspace(0, len(filt)-1, size[n_dim-1]).astype(np.int16)\n",
     "        filt = filt[ind]\n",
