--- a/FEM/transformation_radial_avg_var.ipynb
+++ b/FEM/transformation_radial_avg_var.ipynb
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "raw_adr = tkf.askopenfilenames()\n",
-    "print(raw_adr)"
+    "print(*raw_adr, sep=\"\\n\")"
    ]
   },
   {
@@ -236,6 +236,7 @@
     "    stack_4d_original = stack_4d.copy()\n",
     "    \n",
     "    # find the center position (center of mass)\n",
+    "    \"\"\"\n",
     "    mean_dp = np.mean(stack_4d, axis=(0, 1))\n",
     "    c_pos = [64.0, 64.0]\n",
     "    print(c_pos)\n",
@@ -248,8 +249,8 @@
     "                               linewidth=1, edgecolor=\"r\", facecolor=\"none\"))\n",
     "    fig.tight_layout()\n",
     "    plt.show()\n",
-    "\n",
     "    \"\"\"\n",
+    "\n",
     "    mean_dp = np.mean(stack_4d, axis=(0, 1))\n",
     "    cbox_edge = 15\n",
     "    cbox_outy = int(mean_dp.shape[0]/2 - cbox_edge/2)\n",
@@ -270,7 +271,6 @@
     "                               linewidth=1, edgecolor=\"r\", facecolor=\"none\"))\n",
     "    fig.tight_layout()\n",
     "    plt.show()\n",
-    "    \"\"\"\n",
     "    \n",
     "    # radial average of DPs (not variance, intensity direcltly, RDF?)\n",
     "    radial_avg_stack = []\n",
@@ -319,26 +319,6 @@
     "    \n",
     "    # save (radial variance, 3D)\n",
     "    tifffile.imwrite(adr[:-4]+\"_radial_var.tif\", radial_var_stack)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df468e72-a7d7-4636-ab90-27da042337ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib widget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5eed81c-ed51-4232-899c-80b7e1a785e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
    ]
   },
   {
@@ -406,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
